--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "codesandbox",
+  "name": "vue-js-sidebar-menu-burger-observable",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -24,7 +24,10 @@
     "env": {
       "node": true
     },
-    "extends": ["plugin:vue/essential", "eslint:recommended"],
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
     "rules": {},
     "parserOptions": {
       "parser": "babel-eslint"
@@ -35,5 +38,11 @@
       "autoprefixer": {}
     }
   },
-  "browserslist": ["> 1%", "last 2 versions", "not ie <= 8"]
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ],
+  "keywords": [],
+  "description": ""
 }
